Add Mergist promo to homepage

--- a/src/index.html
+++ b/src/index.html
@@ -105,6 +105,13 @@
 					<a href="https://chrome.google.com/webstore/detail/tally-word-counter/eggkmbghbmjmbdjloifaklghfiecjbnk" target="_blank">
 						<img src="./assets/images/web-store-badge.png" alt="Badge for Tally extension on the Chrome Web Store">
 					</a>
+
+					<h3>Mergist - Online PDF Merger</h3>
+					<p>
+						Need to join some PDF files together? <a href="https://mergist.johng.io" target="_blank">Mergist</a> is an online tool to combine multiple PDF files into one. Mergist has no ads, no file size limits, and your files never leave your device.
+					</p>
+					<br>
+					<img src="./assets/images/mergist-dark-promo.png" alt="Mergist running on an iPhone 14">
 				</div>
 			</section>
 		</main>
@@ -114,6 +121,10 @@
 				<h3>Credits</h3>
 				<p>
 					This project is licensed under the <a href="https://github.com/jerboa88/Tally/blob/gh-pages/LICENSE" rel="license"><strong>MIT license</strong></a> and the source code for this project is available on <a href="https://github.com/jerboa88/Tally">GitHub</a>. If you encounter any bugs, please <a href="https://github.com/jerboa88/Tally/issues">open an issue</a>.
+				</p>
+				<br>
+				<p>
+					The iPhone mockup image for <a href="https://mergist.johng.io" target="_blank">Mergist</a> is generated with <a href="https://imockup.pro/" rel="external">iMockup.pro</a> and licensed under their <a href="https://imockup.pro/license" rel="external">basic license</a>.
 				</p>
 				<br>
 				<p>
