--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
 		</header>
 		<main>
 			<section>
-				<textarea id="input" spellcheck="false" maxlength="1000000" placeholder="The quick brown fox jumps over the lazy dog..." autofocus></textarea>
+				<textarea id="input" spellcheck="false" maxlength="1000000" placeholder="The quick brown cat jumps over the lazy dog..." autofocus></textarea>
 				<form class="table counts">
 					<div>
 						<label for="characters">Characters</label>
@@ -87,13 +87,71 @@
 			<section>
 				<div>
 					<h2>About</h2>
-					<p>
-						Tally Word Counter is a free online tool to count the number of characters, words, paragraphs, and lines in your text. It can also show counts for different types of characters like letters, digits, spaces, and symbols/special characters. Make sure you have the required number of words for your essay or post by counting them instantly with Tally.
-					</p>
+					<aside>
+						<p class="alert note">
+							This calculator was designed for use with English text. It may work for other languages, but I can't guarantee that the results will be accurate. See the <a href="https://github.com/jerboa88/Tally/blob/main/README.md#specification">specification</a> for more details on how the calculator works.
+						</p>
+					</aside>
 					<br>
 					<p>
-						Note that this calculator was designed for use with English text. It may work for other languages, but I can't guarantee that the results will be accurate.
+						Tally Word Counter is a free online tool to count the number of characters, words, paragraphs, and lines in your text. It can also show counts for different types of characters like letters, digits, spaces, and symbols/special characters. Make sure you have the right number of words for your essay or post by counting them instantly with Tally.
 					</p>
+
+					<h3>Features</h3>
+					<ul>
+						<li>
+							<h4>🧮 View text metrics:</h4>
+							Count the number of characters, words, sentences, paragraphs, and lines in your text.
+						</li>
+						<li>
+							<h4>📊 View character composition:</h4>
+							View the number of spaces, digits, letters, and symbols/special characters in the input.
+						</li>
+						<li>
+							<h4>🚀 Real-time updates:</h4>
+							Optimized for speed, Tally updates the counts in real-time as you type.
+						</li>
+						<li>
+							<h4>🎨 Themes:</h4>
+							Save your eyes with the built-in dark mode, or try one of the other <a href="#themes">included themes</a>.
+						</li>
+						<li>
+							<h4>🆓 100% Free & Ad-Free:</h4>
+							Use the tool without distractions, tracking, or paywalls — no ads, no sign-ups, no limitations.
+						</li>
+						<li>
+							<h4>👨🏻‍💻 Open-source:</h4>
+							Know how to code? Help make Tally better by contributing to the project on <a href="https://github.com/jerboa88/Tally">GitHub</a>, or copy it and make your own version!
+						</li>
+					</ul>
+
+					<h3>Use Cases</h3>
+					<ul>
+						<li>
+							<h4>📚 Students & Educators:</h4>
+							Check essay lengths and assignment limits quickly and accurately.
+						</li>
+						<li>
+							<h4>✍️ Writers & Bloggers:</h4>
+							Track writing progress and optimize structure for readability.
+						</li>
+						<li>
+							<h4>📄 Legal & Business Professionals:</h4>
+							Ensure documents meet required character or word counts.
+						</li>
+						<li>
+							<h4>📱 Social Media Managers:</h4>
+							Stay within platform limits for tweets, posts, and bios.
+						</li>
+						<li>
+							<h4>🧪 Developers & Testers:</h4>
+							Analyze input strings and view line counts for code and data.
+						</li>
+						<li>
+							<h4>🌐 SEO Specialists:</h4>
+							Optimize content length for meta descriptions, headings, and body text.
+						</li>
+					</ul>
 
 					<h2>More</h2>
 
