Add Solarized themes

--- a/src/index.html
+++ b/src/index.html
@@ -180,7 +180,7 @@
 			</p>
 			<br>
 			<p>
-				The iPhone mockup image for <a href="https://mergist.johng.io" target="_blank">Mergist</a> is generated with <a href="https://imockup.pro/" rel="external">iMockup.pro</a> and licensed under their <a href="https://imockup.pro/license" rel="external">basic license</a>.
+				The Solarized themes use colors from <a href="https://meat.io/oksolar" rel="external">OKSolar</a>. The iPhone mockup image for <a href="https://mergist.johng.io" target="_blank">Mergist</a> is generated with <a href="https://imockup.pro/" rel="external">iMockup.pro</a> and licensed under their <a href="https://imockup.pro/license" rel="external">basic license</a>.
 			</p>
 			<br>
 			<p>
