Implement warn on large input text feature

--- a/src/index.html
+++ b/src/index.html
@@ -206,6 +206,13 @@
 			</p>
 		</div>
 		<div>
+			<h3>Options</h3>
+			<div>
+				<input type="checkbox" id="warn-on-large-input-text">
+				<label for="warn-on-large-input-text">Warn on large input text</label>
+				<br>
+			</div>
+
 			<h3>Theme</h3>
 			<div id="theme-container"></div>
 		</div>
