--- a/src/index.html
+++ b/src/index.html
@@ -211,6 +211,9 @@
 				<input type="checkbox" id="warn-on-large-input-text">
 				<label for="warn-on-large-input-text">Warn on large input text</label>
 				<br>
+				<input type="checkbox" id="remember-input-text">
+				<label for="remember-input-text">Remember input text</label>
+				<br>
 			</div>
 
 			<h3>Theme</h3>
