--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=yes" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes" />
 	<title>Tally - Word Counter</title>
 	<meta name="description" content="Your favorite word counter, now with a dark mode! Count the number of characters, words, sentences, paragraphs, and lines in your text instantly.">
 	<meta name="author" content="John Goodliff">
@@ -20,11 +20,10 @@
 	<link rel="stylesheet" href="./assets/styles/index.css">
 	<link rel="manifest" href="./assets/site.webmanifest">
 
-	<link rel="apple-touch-icon" sizes="180x180" href="./assets/images/apple-touch-icon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="./assets/images/favicon-16x16.png">
+	<link rel="icon" type="image/svg+xml" href="./assets/images/icon.svg" />
+	<link rel="icon" type="image/png" href="./assets/images/icon.svg?as=png?width=96" sizes="96x96" />
+	<link rel="apple-touch-icon" sizes="180x180" href="./assets/images/icon.svg?as=png?width=180" />
 
-	<link rel="mask-icon" href="./assets/images/safari-pinned-tab.svg" color="#151515">
 	<meta name="msapplication-navbutton-color" content="#151515">
 	<meta name="msapplication-TileColor" content="#151515">
 	<meta name="theme-color" content="#151515">
@@ -33,8 +32,11 @@
 
 <body data-theme="auto">
 	<header class="indent">
-		<a href="/">
-			<h1>Tally</h1>
+		<a href="/" aria-label="Reload the page">
+			<svg width="379.75" height="152.12" viewBox="0 0 100.47 40.25" xmlns="http://www.w3.org/2000/svg" alt="Tally logo">
+				<path d="M29.78 143.45v-13.33l11.89-2.29V49.68H21.48l-1.22 13.25H3.43v-30.4h98.95v30.4H85.45l-1.21-13.25H63.9v78.15l11.96 2.29v13.33zm102.09 1.59q-12.26 0-19.5-6.55-7.24-6.62-7.24-17.97 0-11.66 9.45-18.9 9.45-7.3 27.65-7.3h10.9v-6.1q0-5.94-3.51-9.6-3.43-3.73-10.36-3.73-3.58 0-6.4.91-2.82.84-5.18 2.44l-1.75 10.9h-16l-.3-21.41q6.47-3.66 14.01-5.94 7.55-2.29 16.84-2.29 16.15 0 25.52 7.54 9.36 7.47 9.36 21.4v37.33q.08 1.6.31 3.13l8.6 1.22v13.33H156.7q-.84-2.14-1.67-4.58-.84-2.43-1.22-4.87-3.96 5.03-9.37 8.07-5.33 2.97-12.57 2.97zm5.94-16.45q4.65 0 8.84-2.05 4.19-2.14 6.47-5.57v-13.02h-10.97q-7.3 0-11.12 3.35-3.73 3.35-3.73 8.07 0 4.42 2.74 6.86 2.82 2.36 7.77 2.36zm53.17 14.86v-13.33l10.74-2.29V40.31l-11.88-2.29v-13.4h34.12v103.21l10.74 2.29v13.33zm49.74 0v-13.33l10.74-2.29V40.31l-11.88-2.29v-13.4h34.12v103.21l10.74 2.29v13.33zm73.52 33.28q-2.9 0-6.17-.53-3.2-.46-6.1-1.3l2.52-16.3q1.45.3 3.2.46 1.75.15 3.05.15 4.8 0 8.3-2.51 3.5-2.51 5.1-7.24l1.83-5.1-27.57-68.48-10.14-1.45v-13.4H332v13.4l-10.06 1.53 12.95 36.33 1.6 4.5h.46l15.3-40.99-9.82-1.37v-13.4h40.75v13.4l-9.29 1.3-31.46 79.98q-2.28 5.71-5.86 10.43-3.5 4.8-9 7.7-5.4 2.9-13.32 2.9z" style="fill:var(--color-primary)" transform="translate(-.9 -6.51) scale(.26458)" />
+				<path d="M10.05 164.01V32.54h13.33V164Z" transform="rotate(60 42.03 70.58) scale(.26458)" style="fill:var(--color-primary)" />
+			</svg>
 		</a>
 		<p>Your favorite word counter, now with a dark mode!</p>
 	</header>
@@ -160,7 +162,7 @@
 				</p>
 				<br>
 				<a href="https://chrome.google.com/webstore/detail/tally-word-counter/eggkmbghbmjmbdjloifaklghfiecjbnk" target="_blank">
-					<img src="./assets/images/web-store-badge.png" alt="Badge for Tally extension on the Chrome Web Store">
+					<img src="./assets/images/web-store-badge.png?as=avif&width=206" alt="Badge for Tally extension on the Chrome Web Store" width="206" height="58" loading="lazy">
 				</a>
 
 				<h3>Mergist - Online PDF Merger</h3>
@@ -168,7 +170,7 @@
 					Need to join some PDF files together? <a href="https://mergist.johng.io" target="_blank">Mergist</a> is an online tool to combine multiple PDF files into one. Mergist has no ads, no file size limits, and your files never leave your device.
 				</p>
 				<br>
-				<img src="./assets/images/mergist-dark-promo.png" alt="Mergist running on an iPhone 14">
+				<img src="./assets/images/mergist-dark-promo.png?as=avif&width=424" srcset="./assets/images/mergist-dark-promo.png?as=avif&width=424 424w, ./assets/images/mergist-dark-promo.png?as=avif&width=848 848w" alt="Mergist running on an iPhone 14" width="2000" height="1280" loading="lazy">
 			</div>
 		</section>
 	</main>
@@ -176,7 +178,7 @@
 		<div>
 			<h3>Credits</h3>
 			<p>
-				This project is licensed under the <a href="https://github.com/jerboa88/Tally/blob/gh-pages/LICENSE" rel="license"><strong>MIT license</strong></a> and the source code for this project is available on <a href="https://github.com/jerboa88/Tally">GitHub</a>. If you encounter any bugs, please <a href="https://github.com/jerboa88/Tally/issues">open an issue</a>.
+				This project is licensed under the <a href="https://github.com/jerboa88/Tally/blob/gh-pages/LICENSE" rel="license">MIT license</a> and the source code for this project is available on <a href="https://github.com/jerboa88/Tally">GitHub</a>. If you encounter any bugs, please <a href="https://github.com/jerboa88/Tally/issues">open an issue</a>.
 			</p>
 			<br>
 			<p>
@@ -184,7 +186,7 @@
 			</p>
 			<br>
 			<p>
-				Made with ❤️ by <a href="https://johng.io" rel="author"><strong>John Goodliff</strong></a>.
+				Made with ❤️ by <a href="https://johng.io" rel="author">John Goodliff</a>.
 			</p>
 		</div>
 		<div>
