Update style of checkboxes to match radio buttons

--- a/src/index.html
+++ b/src/index.html
@@ -209,17 +209,19 @@
 		</div>
 		<div>
 			<h3>Options</h3>
-			<div>
-				<input type="checkbox" id="warn-on-large-input-text">
-				<label for="warn-on-large-input-text">Warn on large input text</label>
-				<br>
-				<input type="checkbox" id="remember-input-text">
-				<label for="remember-input-text">Remember input text</label>
-				<br>
+			<div class="config options">
+				<div>
+					<input type="checkbox" id="warn-on-large-input-text">
+					<label for="warn-on-large-input-text">Warn on large input text</label>
+				</div>
+				<div>
+					<input type="checkbox" id="remember-input-text">
+					<label for="remember-input-text">Remember input text</label>
+				</div>
 			</div>
 
 			<h3>Themes</h3>
-			<div id="theme-container"></div>
+			<div class="config themes"></div>
 		</div>
 	</footer>
 
