Fix broken link to themes config

--- a/src/index.html
+++ b/src/index.html
@@ -221,7 +221,7 @@
 			</div>
 
 			<h3>Themes</h3>
-			<div class="config themes"></div>
+			<form id="themes" class="config themes"></form>
 		</div>
 	</footer>
 
