Separate CSS into multiple files. Enable CSS nesting support in Parcel. Include font definitions in main bundle

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
 		}
 	</script>
 
-	<link rel="stylesheet" href="./assets/styles/index.css">
+	<link rel="stylesheet" href="./styles/index.css">
 	<link rel="manifest" href="./assets/site.webmanifest">
 
 	<link rel="icon" type="image/svg+xml" href="./assets/images/icon.svg" />
