Update privacy notice

--- a/src/index.html
+++ b/src/index.html
@@ -200,11 +200,11 @@
 			</p>
 			<br>
 			<p>
-				This site does not collect personal analytics. However, basic visitor information such as IP addresses may be passively collected by our DNS provider (Cloudflare) for security and performance purposes. This data is not used for tracking or marketing.
+				This site may collect anonymized usage analytics. These are used to monitor traffic trends, detect potential threats, and improve the site. This data is not used for tracking or marketing.
 			</p>
 			<br>
 			<p>
-				By using this site to agree to these terms.
+				This is a summary of the privacy policy for this site. See the <a href="https://johng.io/privacy-policy" rel="external">full privacy policy</a> for more details. By using this site to agree to these terms.
 			</p>
 		</div>
 		<div>
