Update features description

--- a/src/index.html
+++ b/src/index.html
@@ -117,7 +117,7 @@
 					</li>
 					<li>
 						<h4>🆓 100% Free & Ad-Free:</h4>
-						Use the tool without distractions, tracking, or paywalls — no ads, no sign-ups, no limitations.
+						Use the tool without distractions, privacy-invasive tracking, or paywalls — no ads, no sign-ups, no limitations.
 					</li>
 					<li>
 						<h4>👨🏻‍💻 Open-source:</h4>
