Add sponsor button to footer

--- a/src/index.html
+++ b/src/index.html
@@ -188,6 +188,8 @@
 			<p>
 				Made with ❤️ by <a href="https://johng.io" rel="author">John Goodliff</a>.
 			</p>
+			<br>
+			<iframe src="https://github.com/sponsors/jerboa88/button" title="Sponsor jerboa88" height="32" width="114"></iframe>
 		</div>
 		<div>
 			<h3>Privacy</h3>
