--- a/src/index.html
+++ b/src/index.html
@@ -186,10 +186,8 @@
 			</p>
 			<br>
 			<p>
-				Made with ❤️ by <a href="https://johng.io" rel="author">John Goodliff</a>.
+				Made with ❤️ by <a href="https://johng.io" rel="author">John Goodliff</a>. If you find this tool useful, please consider <a href="https://johng.io/funding" rel="external">sponsoring me</a> to help support its development.
 			</p>
-			<br>
-			<iframe src="https://github.com/sponsors/jerboa88/button" title="Sponsor jerboa88" height="32" width="114"></iframe>
 		</div>
 		<div>
 			<h3>Privacy</h3>
