--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes" />
 	<title>Tally - Word Counter</title>
-	<meta name="description" content="Your favorite word counter, now with a dark mode! Count the number of characters, words, sentences, paragraphs, and lines in your text instantly.">
+	<meta name="description" content="Your favorite word counter, now with more themes than ever! Count the number of characters, words, sentences, paragraphs, and lines in your text instantly.">
 	<meta name="author" content="John Goodliff">
 
 	<script type="application/ld+json">
@@ -38,7 +38,7 @@
 				<path d="M10.05 164.01V32.54h13.33V164Z" transform="rotate(60 42.03 70.58) scale(.26458)" style="fill:var(--color-primary)" />
 			</svg>
 		</a>
-		<p>Your favorite word counter, now with a dark mode!</p>
+		<p>Your favorite word counter, now with more themes than ever!</p>
 	</header>
 	<main>
 		<section>
