--- a/src/index.html
+++ b/src/index.html
@@ -83,6 +83,46 @@
 					<output id="symbols" for="input">-</output>
 				</label>
 			</form>
+			<nav>
+				<a href="https://github.com/jerboa88/Tally" rel="external" title="View the source code on GitHub">
+					<!-- https://lucide.dev/icons/github -->
+					<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-github-icon lucide-github">
+						<path d="M15 22v-4a4.8 4.8 0 0 0-1-3.5c3 0 6-2 6-5.5.08-1.25-.27-2.48-1-3.5.28-1.15.28-2.35 0-3.5 0 0-1 0-3 1.5-2.64-.5-5.36-.5-8 0C6 2 5 2 5 2c-.3 1.15-.3 2.35 0 3.5A5.403 5.403 0 0 0 4 9c0 3.5 3 5.5 6 5.5-.39.49-.68 1.05-.85 1.65-.17.6-.22 1.23-.15 1.85v4" />
+						<path d="M9 18c-4.51 2-5-2-7-2" />
+					</svg>
+					<span>View source</span>
+				</a>
+				<a href="https://github.com/jerboa88/Tally/issues" rel="external help" title="Report an issue">
+					<!-- https://lucide.dev/icons/message-square-warning -->
+					<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-message-square-warning-icon lucide-message-square-warning">
+						<path d="M22 17a2 2 0 0 1-2 2H6.828a2 2 0 0 0-1.414.586l-2.202 2.202A.71.71 0 0 1 2 21.286V5a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2z" />
+						<path d="M12 15h.01" />
+						<path d="M12 7v4" />
+					</svg>
+					<span>Report issue</span>
+				</a>
+				<a href="https://johng.io/funding" rel="external" title="Sponsor this project">
+					<!-- https://lucide.dev/icons/hand-coins -->
+					<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-hand-coins-icon lucide-hand-coins">
+						<path d="M11 15h2a2 2 0 1 0 0-4h-3c-.6 0-1.1.2-1.4.6L3 17" />
+						<path d="m7 21 1.6-1.4c.3-.4.8-.6 1.4-.6h4c1.1 0 2.1-.4 2.8-1.2l4.6-4.4a2 2 0 0 0-2.75-2.91l-4.2 3.9" />
+						<path d="m2 16 6 6" />
+						<circle cx="16" cy="9" r="2.9" />
+						<circle cx="6" cy="5" r="3" />
+					</svg>
+					<span>Sponsor me</span>
+				</a>
+				<a href="https://johng.io" rel="external author me" title="View more projects by me">
+					<!-- https://lucide.dev/icons/circle-ellipsis -->
+					<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-circle-ellipsis-icon lucide-circle-ellipsis">
+						<circle cx="12" cy="12" r="10" />
+						<path d="M17 12h.01" />
+						<path d="M12 12h.01" />
+						<path d="M7 12h.01" />
+					</svg>
+					<span>More projects</span>
+				</a>
+			</nav>
 		</section>
 		<section class="indent">
 			<div>
