--- a/src/index.html
+++ b/src/index.html
@@ -5,15 +5,44 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes" />
 	<title>Tally - Word Counter</title>
-	<meta name="description" content="Your favorite word counter, now with a dark mode! Count the number of characters, words, sentences, paragraphs, and lines in your text instantly.">
+	<meta name="description" content="Your favorite word counter, now with more themes than ever! Count the number of characters, words, sentences, paragraphs, and lines in your text instantly.">
 	<meta name="author" content="John Goodliff">
 
 	<script type="application/ld+json">
 		{
-			"@context": "http://schema.org",
-			"@type": "Person",
-			"name": "John Goodliff",
-			"url": "https://johng.io"
+			"@context": "https://schema.org",
+			"@type": "WebApplication",
+			"name": "Tally - Word Counter",
+			"url": "https://tally.johng.io",
+			"description": "Your favorite word counter, now with even more themes! Count the number of characters, words, sentences, paragraphs, and lines in your text instantly.",
+			"applicationCategory": "Utility",
+			"operatingSystem": "All",
+			"browserRequirements": "Requires a modern web browser",
+			"creator": {
+				"@type": "Person",
+				"name": "John Goodliff",
+				"url": "https://johng.io",
+				"sameAs" : [
+					"https://github.com/jerboa88",
+					"https://www.linkedin.com/in/johngoodliff/"
+				]
+			},
+			"offers": {
+				"@type": "Offer",
+				"price": "0",
+				"priceCurrency": "CAD"
+			},
+			"featureList": [
+				"Word counting",
+				"Character counting",
+				"Character statistics"
+			],
+			"keywords": [
+				"word counter",
+				"character counter",
+				"online tool",
+				"text analysis"
+			]
 		}
 	</script>
 
@@ -32,17 +61,18 @@
 
 <body data-theme="auto">
 	<header class="indent">
-		<a href="/" aria-label="Reload the page">
-			<svg width="379.75" height="152.12" viewBox="0 0 100.47 40.25" xmlns="http://www.w3.org/2000/svg" alt="Tally logo">
+		<a href="/" aria-label="Tally homepage">
+			<svg width="379.75" height="152.12" viewBox="0 0 100.47 40.25" xmlns="http://www.w3.org/2000/svg" alt="Tally logo" stroke-width="0">
 				<path d="M29.78 143.45v-13.33l11.89-2.29V49.68H21.48l-1.22 13.25H3.43v-30.4h98.95v30.4H85.45l-1.21-13.25H63.9v78.15l11.96 2.29v13.33zm102.09 1.59q-12.26 0-19.5-6.55-7.24-6.62-7.24-17.97 0-11.66 9.45-18.9 9.45-7.3 27.65-7.3h10.9v-6.1q0-5.94-3.51-9.6-3.43-3.73-10.36-3.73-3.58 0-6.4.91-2.82.84-5.18 2.44l-1.75 10.9h-16l-.3-21.41q6.47-3.66 14.01-5.94 7.55-2.29 16.84-2.29 16.15 0 25.52 7.54 9.36 7.47 9.36 21.4v37.33q.08 1.6.31 3.13l8.6 1.22v13.33H156.7q-.84-2.14-1.67-4.58-.84-2.43-1.22-4.87-3.96 5.03-9.37 8.07-5.33 2.97-12.57 2.97zm5.94-16.45q4.65 0 8.84-2.05 4.19-2.14 6.47-5.57v-13.02h-10.97q-7.3 0-11.12 3.35-3.73 3.35-3.73 8.07 0 4.42 2.74 6.86 2.82 2.36 7.77 2.36zm53.17 14.86v-13.33l10.74-2.29V40.31l-11.88-2.29v-13.4h34.12v103.21l10.74 2.29v13.33zm49.74 0v-13.33l10.74-2.29V40.31l-11.88-2.29v-13.4h34.12v103.21l10.74 2.29v13.33zm73.52 33.28q-2.9 0-6.17-.53-3.2-.46-6.1-1.3l2.52-16.3q1.45.3 3.2.46 1.75.15 3.05.15 4.8 0 8.3-2.51 3.5-2.51 5.1-7.24l1.83-5.1-27.57-68.48-10.14-1.45v-13.4H332v13.4l-10.06 1.53 12.95 36.33 1.6 4.5h.46l15.3-40.99-9.82-1.37v-13.4h40.75v13.4l-9.29 1.3-31.46 79.98q-2.28 5.71-5.86 10.43-3.5 4.8-9 7.7-5.4 2.9-13.32 2.9z" style="fill:var(--color-primary)" transform="translate(-.9 -6.51) scale(.26458)" />
 				<path d="M10.05 164.01V32.54h13.33V164Z" transform="rotate(60 42.03 70.58) scale(.26458)" style="fill:var(--color-primary)" />
 			</svg>
+			<h1 class="visually-hidden">Tally</h1>
 		</a>
-		<p>Your favorite word counter, now with a dark mode!</p>
+		<p>Your favorite word counter, now with more themes than ever!</p>
 	</header>
 	<main>
 		<section>
-			<textarea id="input" spellcheck="false" placeholder="The quick brown cat jumps over the lazy dog..." autofocus></textarea>
+			<textarea id="input" aria-label="Text input" spellcheck="false" placeholder="The quick brown cat jumps over the lazy dog..." autofocus></textarea>
 			<form>
 				<label>
 					Characters
@@ -83,6 +113,46 @@
 					<output id="symbols" for="input">-</output>
 				</label>
 			</form>
+			<nav>
+				<a href="https://github.com/jerboa88/Tally" rel="external" title="View the source code on GitHub">
+					<!-- https://lucide.dev/icons/github -->
+					<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-github-icon lucide-github">
+						<path d="M15 22v-4a4.8 4.8 0 0 0-1-3.5c3 0 6-2 6-5.5.08-1.25-.27-2.48-1-3.5.28-1.15.28-2.35 0-3.5 0 0-1 0-3 1.5-2.64-.5-5.36-.5-8 0C6 2 5 2 5 2c-.3 1.15-.3 2.35 0 3.5A5.403 5.403 0 0 0 4 9c0 3.5 3 5.5 6 5.5-.39.49-.68 1.05-.85 1.65-.17.6-.22 1.23-.15 1.85v4" />
+						<path d="M9 18c-4.51 2-5-2-7-2" />
+					</svg>
+					<span>View source</span>
+				</a>
+				<a href="https://github.com/jerboa88/Tally/issues" rel="external help" title="Report an issue">
+					<!-- https://lucide.dev/icons/message-square-warning -->
+					<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-message-square-warning-icon lucide-message-square-warning">
+						<path d="M22 17a2 2 0 0 1-2 2H6.828a2 2 0 0 0-1.414.586l-2.202 2.202A.71.71 0 0 1 2 21.286V5a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2z" />
+						<path d="M12 15h.01" />
+						<path d="M12 7v4" />
+					</svg>
+					<span>Report issue</span>
+				</a>
+				<a href="https://johng.io/funding" rel="external" title="Sponsor this project">
+					<!-- https://lucide.dev/icons/hand-coins -->
+					<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-hand-coins-icon lucide-hand-coins">
+						<path d="M11 15h2a2 2 0 1 0 0-4h-3c-.6 0-1.1.2-1.4.6L3 17" />
+						<path d="m7 21 1.6-1.4c.3-.4.8-.6 1.4-.6h4c1.1 0 2.1-.4 2.8-1.2l4.6-4.4a2 2 0 0 0-2.75-2.91l-4.2 3.9" />
+						<path d="m2 16 6 6" />
+						<circle cx="16" cy="9" r="2.9" />
+						<circle cx="6" cy="5" r="3" />
+					</svg>
+					<span>Sponsor me</span>
+				</a>
+				<a href="https://johng.io" rel="external author me" title="View more projects by me">
+					<!-- https://lucide.dev/icons/circle-ellipsis -->
+					<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-circle-ellipsis-icon lucide-circle-ellipsis">
+						<circle cx="12" cy="12" r="10" />
+						<path d="M17 12h.01" />
+						<path d="M12 12h.01" />
+						<path d="M7 12h.01" />
+					</svg>
+					<span>More projects</span>
+				</a>
+			</nav>
 		</section>
 		<section class="indent">
 			<div>
@@ -178,15 +248,15 @@
 		<div>
 			<h3>Credits</h3>
 			<p>
-				This project is licensed under the <a href="https://github.com/jerboa88/Tally/blob/main/LICENSE" rel="license">MIT license</a> and the source code for this project is available on <a href="https://github.com/jerboa88/Tally">GitHub</a>. If you encounter any bugs, please <a href="https://github.com/jerboa88/Tally/issues">open an issue</a>.
+				Handcrafted with ❤️ by <a href="https://johng.io" rel="external author me">John Goodliff</a>. If you find this tool useful, please consider <a href="https://johng.io/funding" rel="external me">sponsoring me</a> to help support its development.
 			</p>
 			<br>
 			<p>
-				The Solarized themes use colors from <a href="https://meat.io/oksolar" rel="external">OKSolar</a>. The iPhone mockup image for <a href="https://mergist.johng.io" target="_blank">Mergist</a> is generated with <a href="https://imockup.pro/" rel="external">iMockup.pro</a> and licensed under their <a href="https://imockup.pro/license" rel="external">basic license</a>.
+				This project is licensed under the <a href="https://github.com/jerboa88/Tally/blob/main/LICENSE" rel="external license">MIT license</a> and the source code is available on <a href="https://github.com/jerboa88/Tally" rel="external">GitHub</a>. If you encounter any bugs, please <a href="https://github.com/jerboa88/Tally/issues" rel="external help">open an issue</a>.
 			</p>
 			<br>
 			<p>
-				Made with ❤️ by <a href="https://johng.io" rel="author">John Goodliff</a>. If you find this tool useful, please consider <a href="https://johng.io/funding" rel="external">sponsoring me</a> to help support its development.
+				The Solarized themes use colors from <a href="https://meat.io/oksolar" rel="external">OKSolar</a>. The iPhone mockup image for <a href="https://mergist.johng.io" rel="external">Mergist</a> is generated with <a href="https://imockup.pro/" rel="external">iMockup.pro</a> and licensed under their <a href="https://imockup.pro/license" rel="external license">basic license</a>. Icons from <a href="https://lucide.dev/" rel="external">Lucide</a> are licensed under the <a href="https://lucide.dev/license" rel="external license">ISC and MIT licenses</a>.
 			</p>
 		</div>
 		<div>
@@ -196,7 +266,7 @@
 			</p>
 			<br>
 			<p>
-				If you select a new theme or change any options, local storage will be used to store your settings locally. If you select the "Remember input text" option, your input text will also be saved between page visits. You can uncheck this option at any time to clear the saved input text. You can also wipe the saved data for this site in your browser's settings.
+				Local storage is used to save your settings. If the "Remember input text" option is enabled, any text you enter will be saved as well. You can uncheck this option at any time to clear the saved input text. You can also wipe all the saved data for this site in your browser's settings.
 			</p>
 			<br>
 			<p>
@@ -204,7 +274,7 @@
 			</p>
 			<br>
 			<p>
-				This is a summary of the privacy policy for this site. See the <a href="https://johng.io/privacy-policy" rel="external">full privacy policy</a> for more details. By using this site to agree to these terms.
+				This is a summary of the privacy policy for this site. See the <a href="https://johng.io/privacy-policy" rel="external privacy-policy">full privacy policy</a> for more details. By using this site to agree to these terms.
 			</p>
 		</div>
 		<div>
